--- a/style.css
+++ b/style.css
@@ -132,21 +132,21 @@ h1 {
 
 footer {
     font-size: 20px;
-    position: absolute;
-    bottom: 10px;
     width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
+    height: 100px;
+    margin: auto;
+    padding-top: 50px;
+    line-height: 100px;
 }
 footer a, footer a:link {
     text-decoration: none;
+    
 }
 
 .icon-social-media {
     width: 25px;
     transform: scale(1);
+    
 }
 .icon-social-media:hover {
     transform: scale(1.1);
