--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ h1 {
     width: 500px;
     font-size: 50px;
     background-color: #000000;
+    opacity: 0.85;
     color: #ffffff;
     padding: 20px;
    
